--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ body {
   visibility: hidden;
 }
 
-.star.active {
+.star.star-active {
   visibility: visible;
+}
+
+.awesome {
+  color: rgb(206, 13, 45);
 }
