--- a/style.css
+++ b/style.css
@@ -8,6 +8,19 @@ body {
   display: flex;
 }
 
+.submit {
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  background-color: lightblue;
+  padding: 10px;
+  font-weight: bold;
+}
+
+.submit:hover {
+  border: 1px solid black;
+}
+
 .title {
   margin: auto;
 }
