--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ body {
   border-radius: 5px;
   border: none;
   cursor: pointer;
-  background-color: lightblue;
+  background-color: purple;
+  color: yellow;
   padding: 10px;
   font-weight: bold;
 }
@@ -31,7 +32,7 @@ body {
   border-radius: 50%;
   border: none;
   cursor: pointer;
-  background-color: lightblue;
+  background-color: transparent;
   font-weight: bold;
   padding: 10px;
   font-size: 20px;
@@ -43,7 +44,6 @@ body {
   cursor: pointer;
   background-color: red;
   color: #fff;
-  padding: 10px;
   font-weight: bold;
 }
 
@@ -53,19 +53,19 @@ body {
 
 .title {
   margin: auto;
+  color: purple;
 }
 
 .container {
   background-color: #f0f0f0;
   height: fit-content;
-  width: 80%;
+  width: 100%;
   margin: auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+  align-items: inherit;
+  justify-content: space-around;
   border-radius: 10px;
-  color: darkblue;
 }
 
 .total-container {
@@ -73,7 +73,7 @@ body {
   height: fit-content;
   width: 80%;
   margin: auto;
-  color: darkblue;
+  color: purple;
 }
 
 .star-container {
